Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8929

sanity-lfsck test_5 test failed to respond and timed out

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for nasf <fan.yong@intel.com>

      Please provide additional information about the failure here.

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/d5792f0e-be6d-11e6-8111-5254006e85c2.

      The message on the MDS:

      19:03:40:[13134.629408] Lustre: DEBUG MARKER: /usr/sbin/lctl lfsck_start -M lustre-MDT0000 -t namespace -r
      19:03:40:[13134.772866] LDISKFS-fs error (device dm-0): __ldiskfs_new_inode:987: comm lfsck: failed to insert inode 25116: doubly allocated?
      19:03:40:[13134.777288] Aborting journal on device dm-0-8.
      19:03:40:[13134.779639] LDISKFS-fs (dm-0): Remounting filesystem read-only
      19:03:40:[13134.781634] LDISKFS-fs error (device dm-0) in osd_trans_stop:1838: IO failure
      19:03:40:[13134.783757] LustreError: 781:0:(osd_handler.c:1553:osd_trans_commit_cb()) transaction @0xffff880079a15400 commit error: 2
      19:03:40:[13134.786214] LustreError: 1615:0:(osd_handler.c:1841:osd_trans_stop()) lustre-MDT0000: failed to stop transaction: rc = -5
      19:03:40:[13134.917487] Lustre: DEBUG MARKER: /usr/sbin/lctl get_param -n 		mdd.lustre-MDT0000.lfsck_namespace |
      19:03:40:[13134.917487] 		awk '/^flags/ { print $2 }'
      19:03:40:[13135.049251] LustreError: 1691:0:(lfsck_namespace.c:4371:lfsck_namespace_dump()) ASSERTION( lfsck->li_di_oit != ((void *)0) ) failed: 
      19:03:40:[13135.053471] LustreError: 1691:0:(lfsck_namespace.c:4371:lfsck_namespace_dump()) LBUG
      19:03:40:[13135.055733] Pid: 1691, comm: lctl
      19:03:40:[13135.057650] 
      19:03:40:[13135.057650] Call Trace:
      19:03:40:[13135.061147]  [<ffffffffa072f7d3>] libcfs_debug_dumpstack+0x53/0x80 [libcfs]
      19:03:40:[13135.063400]  [<ffffffffa072f841>] lbug_with_loc+0x41/0xb0 [libcfs]
      19:03:40:[13135.065551]  [<ffffffffa0da95dc>] lfsck_namespace_dump+0x57c/0x580 [lfsck]
      19:03:40:[13135.067689]  [<ffffffffa0d97c3f>] lfsck_dump+0xef/0x1f0 [lfsck]
      19:03:40:[13135.069768]  [<ffffffffa0fb3020>] mdd_lfsck_namespace_seq_show+0x20/0x60 [mdd]
      19:03:40:[13135.071866]  [<ffffffff812223ea>] seq_read+0xfa/0x3a0
      19:03:40:[13135.073833]  [<ffffffff8126b61d>] proc_reg_read+0x3d/0x80
      19:03:40:[13135.075749]  [<ffffffff811fdf9e>] vfs_read+0x9e/0x170
      19:03:40:[13135.077654]  [<ffffffff811feb6f>] SyS_read+0x7f/0xe0
      19:03:40:[13135.079528]  [<ffffffff81696709>] system_call_fastpath+0x16/0x1b
      

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: